Вывод самых популярных фильмов по жанру и года